# Mix-and-Game-Jam-2020

./: .gitignore  CMakeLists.txt
include/: App.hpp  BlobEnemy.h  Character.h  EnemyCharacter.h  EnemyManager.h  Inventory.hpp  ItemDrawer.hpp  ItemManager.hpp  JsonData.hpp  LifePack.h  LoadingMenu.hpp  MainGame.hpp  MainMenu.hpp  MiniTetris.hpp  MinitTetris.hpp  MusicManager.h  Object.h  ObjectManager.h  Peuzeul.hpp  Piece.hpp  PlayerCharacter.h  Spawner.h  Step.hpp  Steps.hpp  Tile.h  Tilemap.h  TutoMenu.h  WinMenu.hpp
include/Enemies/: BlobEnemy.h  CloneEnemy.h  SpitterEnemy.h
include/Omega/: StaticValues.h
include/Omega/Data/: triplet.h
include/Omega/Files/: FileFunctions.h
include/Omega/Graphics/: BarsGraphApp.h  Button.h  ChargingBar.h  Circle.h  CurveGraphApp.h  DotGraphApp.h  GraphiqueCurve.h  Input.h  Line.h  Rectangle.h  RessourceManager.h  Sprite.h  Text.h  TextInput.h  TexturedButton.h
include/Omega/Math/: BigInt.h  Complex.h  EnsembleFunction.ipp  EnsembleFunctions.h  GeometricFunctions.h  Graph.h  Graph.ipp  GraphNode.h  GraphNode.ipp  MathFunction.ipp  MathFunctions.h  Matrix.h  Matrix.ipp  RandomFunctions.h
include/Omega/Operators/: PrintFunctions.h  PrintFunctions.ipp
include/Omega/String/: EncodeFunction.h  StringFunctions.h
include/Omega/Vector/: VectorFunction.ipp  VectorFunctions.h
resources/Graphics/Inventory/: background.png~  (+1 more)
resources/Language/: en
resources/data/: enemies1.json  map0.json  map1.json  map2.json  peuzeul1.json
src/: App.cpp  BlobEnemy.cpp  Character.cpp  Character.h  EnemyCharacter.cpp  EnemyCharacter.h  EnemyManager.cpp  GraphComputation.cpp  Inventory.cpp  ItemDrawer.cpp  ItemManager.cpp  JsonData.cpp  LifePack.cpp  LoadingMenu.cpp  MainGame.cpp  MainMenu.cpp  MiniTetris.cpp  MinitTetris.cpp  MusicManager.cpp  Object.cpp  ObjectManager.cpp  Peuzeul.cpp  PlayerCharacter.cpp  PlayerCharacter.h  Spawner.cpp  Tile.cpp  Tilemap.cpp  TutoMenu.cpp  WinMenu.cpp  main.cpp
src/Enemies/: BlobEnemy.cpp  CloneEnemy.cpp  SpitterEnemy.cpp
(+27 files in other folders)
